--- a/Views/Home/Home_Lecturer.cshtml
+++ b/Views/Home/Home_Lecturer.cshtml
@@ -9,9 +9,8 @@
     <ul class="sidebar-menu">
         <li><a href="@Url.Action("Home_Lecturer", "Home")"><i class="fas fa-tachometer-alt menu-icon"></i><span class="menu-text">Dashboard</span></a></li>
         <li><a href="@Url.Action("MyTasks", "Task")"><i class="fas fa-clipboard-list menu-icon"></i><span class="menu-text">My Tasks</span></a></li>
-        <li><a href="@Url.Action("UploadQuestions", "Question")"><i class="fas fa-upload menu-icon"></i><span class="menu-text">Upload Questions</span></a></li>
+        <li><a href="@Url.Action("Questions", "Question")"><i class="fas fa-database menu-icon"></i><span class="menu-text">Question Bank</span></a></li>
         <li><a href="@Url.Action("CheckDuplicate", "Duplicate")"><i class="fas fa-search menu-icon"></i><span class="menu-text">Duplicate Check</span></a></li>
-        <li><a href="@Url.Action("EditQuestions", "Question")"><i class="fas fa-edit menu-icon"></i><span class="menu-text">Edit Questions</span></a></li>
         <li><a href="@Url.Action("MockExam", "Exam")"><i class="fas fa-file-signature menu-icon"></i><span class="menu-text">Mock Exam</span></a></li>
         <li><a href="@Url.Action("Notifications", "Home")"><i class="fas fa-bell menu-icon"></i><span class="menu-text">Notifications</span></a></li>
     </ul>
